@@ -1361,7 +1361,7 @@ dt{
   font-weight:bold; }
 
 dd{
-  margin-bottom:.5rem; }
+  margin-bottom:0.5rem; }
 
 table{
   background-color:transparent;
