@@ -14,7 +14,7 @@ code {
 }
 
 pre {
-    margin-bottom: $generic-margin-bottom;
+    margin-bottom: $pre-margin-bottom;
 }
 
 pre > code {
