@@ -2,7 +2,7 @@
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 
 form {
-    margin-bottom: $generic-margin-bottom;
+    margin-bottom: $form-margin-bottom;
 }
 
 input {
