@@ -2,5 +2,5 @@
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 
 figure {
-    margin: 0 0 $generic-margin-bottom;
+    margin: 0 0 $figure-margin-bottom;
 }
