@@ -6,7 +6,7 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
     font-size: $table-font-size;
-    margin-bottom: $generic-margin-bottom;
+    margin-bottom: $table-margin-bottom;
     max-width: 100%;
     width: 100%;
 }
